Servlet mapping Configured at DD file on Web.xml inside directory WEB-INF. This is the other way to use a servlet, is without Annotation (@WebServlet())

--- a/WebContent/indexView.html
+++ b/WebContent/indexView.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>[SERVLET] - indexView.html</title>
-</head>
+	<head>
+	<meta charset="UTF-8">
+	<title>[SERVLETS] - indexView.html</title>
+	</head>
 <body>
-	<h1>html page with link to servlet</h1>
-	<a href="/servlet/servletController">jump to servlet controller</a>
+	<h1>html page with link to servlets</h1>
+	<a href="/servlets/servletController">jump to servlet controller</a> <br/>
+	<a href="/servlets/signServletController">jump to servlet Sign controller</a>
 </body>
 </html>
